--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,10 @@
   "description": "",
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/mongoose": "^5.11.96",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "express": "^4.21.0",
     "mongoose": "^8.6.3"
   },
